<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/order_number_relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp">

        <TextView
            android:id="@+id/request_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/order_title"
            android:textColor="@color/md_blue_900"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/request_title_text_view"
            android:textColor="@color/md_black_1000"
            android:textSize="25sp"
            android:layout_marginStart="15dp"/>

        <Button
            android:id="@+id/order_detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="90dp"
            android:text="Detalle"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/order_detail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_number_relativeLayout"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_client"
                android:textColor="@color/md_purple_900"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_client_name"
                android:textColor="@color/md_purple_900"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_seller"
                android:textColor="@color/md_purple_900"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_audit_log_user"
                android:textColor="@color/md_purple_900"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail_order_type"
                android:textColor="@color/md_purple_900"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/product_item_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/product_item_nameclient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/product_item_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/product_item_auditloguser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/product_item_ordertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/products_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_detail_layout"
        android:text="@string/products_list_title"
        android:textColor="@color/md_blue_900"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:id="@+id/product_field_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/products_title_text_view"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/product_item_code"
            android:textColor="@color/md_purple_900"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/product_item_description"
            android:textColor="@color/md_purple_900"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/product_item_amount"
            android:textColor="@color/md_purple_900"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/product_item_motive"
            android:textColor="@color/md_purple_900"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/products_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_field_titles"
        android:layout_above="@+id/products_confirm_button"
        android:descendantFocusability="beforeDescendants"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
    </ListView>

    <Button
        android:id="@+id/products_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="ENVIAR"
        android:textSize="20sp"/>

</RelativeLayout>