<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_request_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="genrod.pedidosproto.RequestOrderActivity"
    tools:showIn="@layout/activity_request_order">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number_title"
        android:textColor="@color/md_blue_900"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/order_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/order_number_hint"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/order_search_button"
        android:text="@string/order_number_button"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
